# newsletter

./: .env  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  configuration.toml  sqlx-data.json
.github/workflows/: build.yml  ci.yml  clippy.yml  general.yml
migrations/: 20210217040645_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  configuration.toml  lib.rs  main.rs  src  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
