[package]
name = "newsletter"
version = "0.1.0"
authors = ["yngtodd <young.todd.mk@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.0-beta.3"

[dev-dependencies]
actix-rt = "2.0.2"
reqwest = "0.11"
tokio = "1"
