[package]
name = "newsletter"
version = "0.1.0"
authors = ["yngtodd <young.todd.mk@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.0-beta.3"
chrono = "0.4.19"
config = "0.10.1"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tracing = "0.1.24"
tracing-futures = "0.2.5"
uuid = { version = "0.8.2", features = ["v4"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.1.7"
tracing-log = "0.1.2"

[dev-dependencies]
actix-rt = "2.0.2"
reqwest = "0.11"
tokio = "1"
